# AnnotationTools

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  croppic.cpp
